task4 and task5

--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -1,11 +1,11 @@
-<!--
 <div >
   <div *ngFor="let task of tasks; let i = index; let odd = odd, let first = first" [ngClass]="{'bold': odd, 'pink': first }" >
-    {{ i + 1 }}.: {{ tasks[i] }} 
+    <!--{{ i + 1 }}.: {{ tasks[i] }} -->
+    <app-task [name] = "task" (taskClicked)="handleStatus100($event)"></app-task>
   </div>
 </div>
--->
 
+<!--
 <div>
   <div *ngFor="let task of tasks; let i = index; let odd = odd, let first = first">
     <div [ngStyle]="{'background-color': getBgColor(i), 'font-weight': getBold(i)}">
@@ -13,3 +13,5 @@
     </div>
   </div>
 </div>
+-->
+
