--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -1,7 +1,7 @@
 <div >
   <div *ngFor="let task of tasks; let i = index; let odd = odd, let first = first" [ngClass]="{'bold': odd, 'pink': first }" >
     <!--{{ i + 1 }}.: {{ tasks[i] }} -->
-    <app-task [name] = "task" (taskClicked)="handleStatus100($event)"></app-task>
+    <app-task [name] = "task" (taskFinished)="handleTaskFinished($event)"></app-task>
   </div>
 </div>
 
